# src/main/java/ch/sbb/polarion/extension/test_data/rest/controller/TestDataApiController.java
@@ -4,6 +4,7 @@ import ch.sbb.polarion.extension.generic.rest.filter.Secured;
 import org.glassfish.jersey.media.multipart.FormDataBodyPart;
 
 import javax.ws.rs.Path;
+import javax.ws.rs.core.HttpHeaders;
 import javax.ws.rs.core.Response;
 
 @Secured
@@ -33,5 +34,50 @@ public class TestDataApiController extends TestDataInternalController {
     @Override
     public Response getTemplateHash(String templateId) {
         return polarionService.callPrivileged(() -> super.getTemplateHash(templateId));
+    }
+
+    @Override
+    public Response downloadProjectTemplate(String projectId) {
+        return polarionService.callPrivileged(() -> super.downloadProjectTemplate(projectId));
+    }
+
+    @Override
+    public Response createWikiPage(String projectId, String spaceId, String name) {
+        return polarionService.callPrivileged(() -> super.createWikiPage(projectId, spaceId, name));
+    }
+
+    @Override
+    public Response deleteWikiPage(String projectId, String spaceId, String name) {
+        return polarionService.callPrivileged(() -> super.deleteWikiPage(projectId, spaceId, name));
+    }
+
+    @Override
+    public Response createWikiPageInDefaultSpace(String spaceId, String name) {
+        return polarionService.callPrivileged(() -> super.createWikiPageInDefaultSpace(spaceId, name));
+    }
+
+    @Override
+    public Response deleteWikiPageInDefaultSpace(String spaceId, String name) {
+        return polarionService.callPrivileged(() -> super.deleteWikiPageInDefaultSpace(spaceId, name));
+    }
+
+    @Override
+    public Response createLiveReport(String projectId, String spaceId, String name, HttpHeaders headers, String content) {
+        return polarionService.callPrivileged(() -> super.createLiveReport(projectId, spaceId, name, headers, content));
+    }
+
+    @Override
+    public Response deleteLiveReport(String projectId, String spaceId, String name) {
+        return polarionService.callPrivileged(() -> super.deleteLiveReport(projectId, spaceId, name));
+    }
+
+    @Override
+    public Response createLiveReportInDefaultSpace(String spaceId, String name, HttpHeaders headers, String content) {
+        return polarionService.callPrivileged(() -> super.createLiveReportInDefaultSpace(spaceId, name, headers, content));
+    }
+
+    @Override
+    public Response deleteLiveReportInDefaultSpace(String spaceId, String name) {
+        return polarionService.callPrivileged(() -> super.deleteLiveReportInDefaultSpace(spaceId, name));
     }
 }
